--- a/frontend-react/src/pages/Home/Home.css
+++ b/frontend-react/src/pages/Home/Home.css
@@ -3,7 +3,8 @@
 .home {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    flex: 1;
+    min-height: 0;
     overflow: hidden;
 }
 
@@ -21,6 +22,8 @@
     align-items: center;
     width: 100%;
     flex: 1;
+    min-height: 0;
+    overflow: hidden;
 }
 
 .chatbox {
@@ -29,7 +32,8 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    height: calc(100vh - 100px);
+    flex: 1;
+    min-height: 0;
 }
 
 .chatbox__messages__container {
@@ -52,6 +56,7 @@
 
 .chatbox__messages {
     flex: 1;
+    min-height: 0;
     padding: 16px 0;
     overflow-y: auto;
     display: flex;
@@ -468,7 +473,6 @@
 
 @media screen and (max-width: 600px) {
     .chatbox {
-        height: calc(100dvh - 100px);
         border: none;
     }
 
